--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: ""
-baseurl: ""
+url: "http://jonnysmillie.github.io/burtonb4rn/"
+baseurl: "http://jonnysmillie.github.io/burtonb4rn/"
 
 # If you are building a GitHub project page then use these settings:
 #url: "http://username.github.io/projectname"
