--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
 url: "https://jonnysmillie.github.io/burtonb4rn/"
-baseurl: "https://jonnysmillie.github.io/burtonb4rn/"
+baseurl: "jonnysmillie.github.io/burtonb4rn/"
 
 # If you are building a GitHub project page then use these settings:
 #url: "http://username.github.io/projectname"
