--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: BURTON B4RN
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: Bringing Better Internet to Burton-in-Kendal
 
 # --- Navigation bar options --- #
 
@@ -100,7 +100,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "jonnysmillie.co.uk"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "burtonb4rn.org"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
